python/theory L/fichiers cours 2122/TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst COLON
Rule 3     linst -> inst COLON
Rule 4     inst -> FUNCTION NAME LPAREN RPAREN LBRACE linst RBRACE
Rule 5     inst -> FUNCTION NAME LPAREN inst RPAREN LBRACE linst RBRACE
Rule 6     inst -> NAME LPAREN RPAREN COLON
Rule 7     inst -> NAME EQUAL expression
Rule 8     inst -> PRINT LPAREN expression RPAREN
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> expression TIMES expression
Rule 12    expression -> expression OR expression
Rule 13    expression -> expression AND expression
Rule 14    expression -> expression EQUALS expression
Rule 15    expression -> expression LOWER expression
Rule 16    expression -> expression HIGHER expression
Rule 17    expression -> expression DIVIDE expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> NUMBER
Rule 20    expression -> NAME
Rule 21    inst -> IF LPAREN expression RPAREN LBRACE linst RBRACE
Rule 22    inst -> WHILE LPAREN expression RPAREN LBRACE linst RBRACE
Rule 23    inst -> FOR LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE

Terminals, with rules where they appear

AND                  : 13
COLON                : 2 3 6 23 23
DIVIDE               : 17
EQUAL                : 7
EQUALS               : 14
FOR                  : 23
FUNCTION             : 4 5
HIGHER               : 16
IF                   : 21
LBRACE               : 4 5 21 22 23
LOWER                : 15
LPAREN               : 4 5 6 8 18 21 22 23
MINUS                : 10
NAME                 : 4 5 6 7 20
NUMBER               : 19
OR                   : 12
PLUS                 : 9
PRINT                : 8
RBRACE               : 4 5 21 22 23
RPAREN               : 4 5 6 8 18 21 22 23
TIMES                : 11
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

expression           : 7 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 21 22 23
inst                 : 2 3 5 23 23
linst                : 1 2 4 5 21 22 23
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst COLON
    (3) linst -> . inst COLON
    (4) inst -> . FUNCTION NAME LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> . FUNCTION NAME LPAREN inst RPAREN LBRACE linst RBRACE
    (6) inst -> . NAME LPAREN RPAREN COLON
    (7) inst -> . NAME EQUAL expression
    (8) inst -> . PRINT LPAREN expression RPAREN
    (21) inst -> . IF LPAREN expression RPAREN LBRACE linst RBRACE
    (22) inst -> . WHILE LPAREN expression RPAREN LBRACE linst RBRACE
    (23) inst -> . FOR LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE

    FUNCTION        shift and go to state 4
    NAME            shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst COLON
    (4) inst -> . FUNCTION NAME LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> . FUNCTION NAME LPAREN inst RPAREN LBRACE linst RBRACE
    (6) inst -> . NAME LPAREN RPAREN COLON
    (7) inst -> . NAME EQUAL expression
    (8) inst -> . PRINT LPAREN expression RPAREN
    (21) inst -> . IF LPAREN expression RPAREN LBRACE linst RBRACE
    (22) inst -> . WHILE LPAREN expression RPAREN LBRACE linst RBRACE
    (23) inst -> . FOR LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE

    $end            reduce using rule 1 (start -> linst .)
    FUNCTION        shift and go to state 4
    NAME            shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    inst                           shift and go to state 10

state 3

    (3) linst -> inst . COLON

    COLON           shift and go to state 11


state 4

    (4) inst -> FUNCTION . NAME LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> FUNCTION . NAME LPAREN inst RPAREN LBRACE linst RBRACE

    NAME            shift and go to state 12


state 5

    (6) inst -> NAME . LPAREN RPAREN COLON
    (7) inst -> NAME . EQUAL expression

    LPAREN          shift and go to state 13
    EQUAL           shift and go to state 14


state 6

    (8) inst -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 15


state 7

    (21) inst -> IF . LPAREN expression RPAREN LBRACE linst RBRACE

    LPAREN          shift and go to state 16


state 8

    (22) inst -> WHILE . LPAREN expression RPAREN LBRACE linst RBRACE

    LPAREN          shift and go to state 17


state 9

    (23) inst -> FOR . LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE

    LPAREN          shift and go to state 18


state 10

    (2) linst -> linst inst . COLON

    COLON           shift and go to state 19


state 11

    (3) linst -> inst COLON .

    FUNCTION        reduce using rule 3 (linst -> inst COLON .)
    NAME            reduce using rule 3 (linst -> inst COLON .)
    PRINT           reduce using rule 3 (linst -> inst COLON .)
    IF              reduce using rule 3 (linst -> inst COLON .)
    WHILE           reduce using rule 3 (linst -> inst COLON .)
    FOR             reduce using rule 3 (linst -> inst COLON .)
    $end            reduce using rule 3 (linst -> inst COLON .)
    RBRACE          reduce using rule 3 (linst -> inst COLON .)


state 12

    (4) inst -> FUNCTION NAME . LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> FUNCTION NAME . LPAREN inst RPAREN LBRACE linst RBRACE

    LPAREN          shift and go to state 20


state 13

    (6) inst -> NAME LPAREN . RPAREN COLON

    RPAREN          shift and go to state 21


state 14

    (7) inst -> NAME EQUAL . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 23

state 15

    (8) inst -> PRINT LPAREN . expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 26

state 16

    (21) inst -> IF LPAREN . expression RPAREN LBRACE linst RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 27

state 17

    (22) inst -> WHILE LPAREN . expression RPAREN LBRACE linst RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 28

state 18

    (23) inst -> FOR LPAREN . inst COLON expression COLON inst RPAREN LBRACE linst RBRACE
    (4) inst -> . FUNCTION NAME LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> . FUNCTION NAME LPAREN inst RPAREN LBRACE linst RBRACE
    (6) inst -> . NAME LPAREN RPAREN COLON
    (7) inst -> . NAME EQUAL expression
    (8) inst -> . PRINT LPAREN expression RPAREN
    (21) inst -> . IF LPAREN expression RPAREN LBRACE linst RBRACE
    (22) inst -> . WHILE LPAREN expression RPAREN LBRACE linst RBRACE
    (23) inst -> . FOR LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE

    FUNCTION        shift and go to state 4
    NAME            shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    inst                           shift and go to state 29

state 19

    (2) linst -> linst inst COLON .

    FUNCTION        reduce using rule 2 (linst -> linst inst COLON .)
    NAME            reduce using rule 2 (linst -> linst inst COLON .)
    PRINT           reduce using rule 2 (linst -> linst inst COLON .)
    IF              reduce using rule 2 (linst -> linst inst COLON .)
    WHILE           reduce using rule 2 (linst -> linst inst COLON .)
    FOR             reduce using rule 2 (linst -> linst inst COLON .)
    $end            reduce using rule 2 (linst -> linst inst COLON .)
    RBRACE          reduce using rule 2 (linst -> linst inst COLON .)


state 20

    (4) inst -> FUNCTION NAME LPAREN . RPAREN LBRACE linst RBRACE
    (5) inst -> FUNCTION NAME LPAREN . inst RPAREN LBRACE linst RBRACE
    (4) inst -> . FUNCTION NAME LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> . FUNCTION NAME LPAREN inst RPAREN LBRACE linst RBRACE
    (6) inst -> . NAME LPAREN RPAREN COLON
    (7) inst -> . NAME EQUAL expression
    (8) inst -> . PRINT LPAREN expression RPAREN
    (21) inst -> . IF LPAREN expression RPAREN LBRACE linst RBRACE
    (22) inst -> . WHILE LPAREN expression RPAREN LBRACE linst RBRACE
    (23) inst -> . FOR LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE

    RPAREN          shift and go to state 30
    FUNCTION        shift and go to state 4
    NAME            shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    inst                           shift and go to state 31

state 21

    (6) inst -> NAME LPAREN RPAREN . COLON

    COLON           shift and go to state 32


state 22

    (20) expression -> NAME .

    PLUS            reduce using rule 20 (expression -> NAME .)
    MINUS           reduce using rule 20 (expression -> NAME .)
    TIMES           reduce using rule 20 (expression -> NAME .)
    OR              reduce using rule 20 (expression -> NAME .)
    AND             reduce using rule 20 (expression -> NAME .)
    EQUALS          reduce using rule 20 (expression -> NAME .)
    LOWER           reduce using rule 20 (expression -> NAME .)
    HIGHER          reduce using rule 20 (expression -> NAME .)
    DIVIDE          reduce using rule 20 (expression -> NAME .)
    COLON           reduce using rule 20 (expression -> NAME .)
    RPAREN          reduce using rule 20 (expression -> NAME .)


state 23

    (7) inst -> NAME EQUAL expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . EQUALS expression
    (15) expression -> expression . LOWER expression
    (16) expression -> expression . HIGHER expression
    (17) expression -> expression . DIVIDE expression

    COLON           reduce using rule 7 (inst -> NAME EQUAL expression .)
    RPAREN          reduce using rule 7 (inst -> NAME EQUAL expression .)
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OR              shift and go to state 36
    AND             shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    HIGHER          shift and go to state 40
    DIVIDE          shift and go to state 41


state 24

    (18) expression -> LPAREN . expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 42

state 25

    (19) expression -> NUMBER .

    PLUS            reduce using rule 19 (expression -> NUMBER .)
    MINUS           reduce using rule 19 (expression -> NUMBER .)
    TIMES           reduce using rule 19 (expression -> NUMBER .)
    OR              reduce using rule 19 (expression -> NUMBER .)
    AND             reduce using rule 19 (expression -> NUMBER .)
    EQUALS          reduce using rule 19 (expression -> NUMBER .)
    LOWER           reduce using rule 19 (expression -> NUMBER .)
    HIGHER          reduce using rule 19 (expression -> NUMBER .)
    DIVIDE          reduce using rule 19 (expression -> NUMBER .)
    COLON           reduce using rule 19 (expression -> NUMBER .)
    RPAREN          reduce using rule 19 (expression -> NUMBER .)


state 26

    (8) inst -> PRINT LPAREN expression . RPAREN
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . EQUALS expression
    (15) expression -> expression . LOWER expression
    (16) expression -> expression . HIGHER expression
    (17) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OR              shift and go to state 36
    AND             shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    HIGHER          shift and go to state 40
    DIVIDE          shift and go to state 41


state 27

    (21) inst -> IF LPAREN expression . RPAREN LBRACE linst RBRACE
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . EQUALS expression
    (15) expression -> expression . LOWER expression
    (16) expression -> expression . HIGHER expression
    (17) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OR              shift and go to state 36
    AND             shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    HIGHER          shift and go to state 40
    DIVIDE          shift and go to state 41


state 28

    (22) inst -> WHILE LPAREN expression . RPAREN LBRACE linst RBRACE
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . EQUALS expression
    (15) expression -> expression . LOWER expression
    (16) expression -> expression . HIGHER expression
    (17) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OR              shift and go to state 36
    AND             shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    HIGHER          shift and go to state 40
    DIVIDE          shift and go to state 41


state 29

    (23) inst -> FOR LPAREN inst . COLON expression COLON inst RPAREN LBRACE linst RBRACE

    COLON           shift and go to state 46


state 30

    (4) inst -> FUNCTION NAME LPAREN RPAREN . LBRACE linst RBRACE

    LBRACE          shift and go to state 47


state 31

    (5) inst -> FUNCTION NAME LPAREN inst . RPAREN LBRACE linst RBRACE

    RPAREN          shift and go to state 48


state 32

    (6) inst -> NAME LPAREN RPAREN COLON .

    COLON           reduce using rule 6 (inst -> NAME LPAREN RPAREN COLON .)
    RPAREN          reduce using rule 6 (inst -> NAME LPAREN RPAREN COLON .)


state 33

    (9) expression -> expression PLUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 49

state 34

    (10) expression -> expression MINUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 50

state 35

    (11) expression -> expression TIMES . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 51

state 36

    (12) expression -> expression OR . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 52

state 37

    (13) expression -> expression AND . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 53

state 38

    (14) expression -> expression EQUALS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 54

state 39

    (15) expression -> expression LOWER . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 55

state 40

    (16) expression -> expression HIGHER . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 56

state 41

    (17) expression -> expression DIVIDE . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 57

state 42

    (18) expression -> LPAREN expression . RPAREN
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . EQUALS expression
    (15) expression -> expression . LOWER expression
    (16) expression -> expression . HIGHER expression
    (17) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 58
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    OR              shift and go to state 36
    AND             shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    HIGHER          shift and go to state 40
    DIVIDE          shift and go to state 41


state 43

    (8) inst -> PRINT LPAREN expression RPAREN .

    COLON           reduce using rule 8 (inst -> PRINT LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (inst -> PRINT LPAREN expression RPAREN .)


state 44

    (21) inst -> IF LPAREN expression RPAREN . LBRACE linst RBRACE

    LBRACE          shift and go to state 59


state 45

    (22) inst -> WHILE LPAREN expression RPAREN . LBRACE linst RBRACE

    LBRACE          shift and go to state 60


state 46

    (23) inst -> FOR LPAREN inst COLON . expression COLON inst RPAREN LBRACE linst RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression EQUALS expression
    (15) expression -> . expression LOWER expression
    (16) expression -> . expression HIGHER expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . NAME

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    NAME            shift and go to state 22

    expression                     shift and go to state 61

state 47

    (4) inst -> FUNCTION NAME LPAREN RPAREN LBRACE . linst RBRACE
    (2) linst -> . linst inst COLON
    (3) linst -> . inst COLON
    (4) inst -> . FUNCTION NAME LPAREN RPAREN LBRACE linst RBRACE
    (5) inst -> . FUNCTION NAME LPAREN inst RPAREN LBRACE linst RBRACE
    (6) inst -> . NAME LPAREN RPAREN COLON
    (7) inst -> . NAME EQUAL expression
    (8) inst -> . PRINT LPAREN expression RPAREN
    (21) inst -> . IF LPAREN expression RPAREN LBRACE linst RBRACE
    (22) inst -> . WHILE LPAREN expression RPAREN LBRACE linst RBRACE
    (23) inst -> . FOR LPAREN inst COLON expression COLON inst RPAREN LBRACE linst RBRACE
